# osm2usd

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
specs/: osm2usd.md
src/osm2usd/: __init__.py  build.py  cli.py  crop.py  drape.py  geometry.py  group.py  materials.py  project.py
tests/: conftest.py  test_build.py  test_crop.py  test_drape.py  test_geometry.py  test_no_network.py  test_project.py
tests/fixtures/: make_fixtures.py  origin.json  tiny_dem.tif  tiny_osm.json
