[project]
name = "osm2usd"
version = "0.1.0"
description = "Scene-agnostic builder: turn overpy OSM JSON into draped, class-grouped USD for digital-twin scenes."
requires-python = ">=3.11"
dependencies = [
    "usd-core>=24.05",
    "pyproj>=3.6",
    "rasterio>=1.3",
    "numpy>=1.26",
    "rich>=13",
    "rich-argparse>=1.4",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
osm2usd = "osm2usd.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/osm2usd"]
